--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -38,16 +38,19 @@
         android:layout_alignLeft="@+id/psd"
         android:layout_below="@+id/psd"
         android:layout_marginTop="44dp"
-        android:text="登录" />
+        android:background="#FF3030"
+     android:textSize="24dp"
+        android:text="登  录" />
     <Button
         android:id="@+id/goregister"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/smssdk_transparent"
+        android:background="#00000000"
 
         android:layout_alignRight="@id/bt"
         android:layout_below="@id/bt"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="0dp"
+        android:textColor="#FF3030"
         android:text="没有账号？"/>
 
 </RelativeLayout>
